--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miniprojekt 2 Javascript</title>
-    <!-- <link rel="icon" type="image/x-icon" href="/img/scissors.png"> -->
+    <link rel="icon" type="image/x-icon" href=" ">
     <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="./js/script.js"></script>
 </head>
 
 <body>
-    <button id="put">PUT</button>
 
     <div class="columnCenter">
+
         <h1>Rock Paper Scissors</h1>
         <form class="columnCenter">
             <h2>Enter your name and press the "Play!" button to start the game!</h2>
@@ -65,10 +65,12 @@
             </div>
 
         </div>
+
         <div class="columnCenter" id="info">
             <h2>How to play</h2>
             <p>Choose either "Rock", "Paper" or "Scissors" and then click on your choice in the left panel.</p>
         </div>
+
     </div>
 </body>
 
