--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
             <div id="score">
                 <h1>Highscore List</h1>
                 <ol></ol>
+                <h2>Round Winner</h2>
+                <p id="roundWinner"></p>
             </div>
 
             <div class="columnCenter" id="pc">
